--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Student-Site</title>
 </head>
 <body>
-    Hi! I am Harshil
+    Hi! I am Harshil.
+    I study at GLS University,Ahmedabad.
+    Currently I'm learning Web Development with Tanay Pratap.
 </body>
 </html>
