--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     Hi! I am Harshil.
     I study at GLS University,Ahmedabad.
     Currently I'm learning Web Development with Tanay Pratap.
+    Here I'll showcase my some CLI apps.
 </body>
 </html>
