--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     Hi! I am Harshil.
     I study at GLS University,Ahmedabad.
     Currently I'm learning Web Development with Tanay Pratap.
+
+    I like to read. I also like diving.
 </body>
 </html>
